@@ -24,14 +24,16 @@ local burnerEntities = {
 	"stone-mixing-furnace",
 	"stone-chemical-furnace",
 	"burner-assembling-machine",
-	"burner-mining-drill"
+	"burner-mining-drill",
+	"omnitor-lab",
+	"omnitor-assembling-machine"
 }
 
 for _,entity in pairs(burnerEntities) do
 	local build = omni.lib.find_entity_prototype(entity)
 	if build then
 		build.energy_source.fuel_category = nil
-		build.energy_source.fuel_categories = {"omnite","chemical"}
+		build.energy_source.fuel_categories = {"omnite","chemical","vehicle-fuel"}
 	end
 end
 
